# OpenSpot

./: .gitignore  README.md  gitignore  package-lock.json
backend/: .env  openspot.db  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  deps.py  main.py  models.py  seed.py
backend/app/routers/: __init__.py  bookings.py  listings.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: BookingForm.jsx  ListingCard.jsx  ListingForm.jsx  LoginModal.jsx  Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreateListingPage.jsx  HomePage.jsx  ListingDetailPage.jsx  ListingsPage.jsx  LoginPage.jsx  MyBookingsPage.jsx  MyListingsPage.jsx  ProfilePage.jsx  SignupPage.jsx
