[project]
name = "openspot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.24",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
]